--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ nav ul li a{
 
 
 body{
-    background-color: #ADBC9F;
+    background-color: white;
 }
 .image{
     flex: 1;
@@ -150,8 +150,8 @@ image img:hover{
 .content p{
     font-size: 30px;
     line-height: 1.5;
-    color : #F8F4EC ;
-    font-family: 'Roboto Condensed', sans-serif;
+    color : #78A083 ;
+    font-family: 'Quicksand', sans-serif;
     text-align: justify;
     font-weight: bolder;
 }
@@ -159,7 +159,7 @@ image img:hover{
 
 
 .section{
-    background: #ADBC9F;
+    background: white;
     padding-left: 100px;
     margin-bottom: 150px;
     margin-left: 100px;
@@ -183,7 +183,7 @@ image img:hover{
 }
 
 .section2{
-    background: #436850;
+    
     padding-left: 100px;
     padding-right: 100px;
     margin-left: 230px;
@@ -192,6 +192,62 @@ image img:hover{
    
     
 }
+
+.works{
+  font-family: 'Quicksand', sans-serif;
+  text-align: center;
+  color: white;
+  font-size: 80px;
+  margin-left: 300px;
+  margin-right: 300px;
+  border-radius: 50px;
+  padding-top: 5px;
+  padding-bottom: 10px;
+  background-color: #436850;
+  margin-bottom: 100px;
+}
+
+.about{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.skill{
+  width: 160px;
+  height: 160px;
+}
+
+.outer{
+  height: 160px;
+  width: 160px;
+  border-radius: 50%;
+  box-shadow: 4px 6px 14px 18px rgba(0,0,0,0.1),0px 10px 15px -3px rgba(0,0,0,0.1),0px 10px 15px -3px rgba(0,0,0,0.1),0px 10px 15px -3px rgba(0,0,0,0.1);
+  padding: 20px;
+  margin-bottom: 50px;
+
+}
+
+.inner{
+  height: 160px;
+  width:160px;
+  border-radius: 50%;
+  box-shadow: 0px 0px 5px 4px rgba(0,0,0,0.1);
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
+#number {
+  font-weight: 600;
+  font-size: 30px;
+  color: #555;
+}
+
+circle {
+  fill: none;
+  stroke: red;
+}
+
 
 .product-container {
     display: flex;
