--- a/style.css
+++ b/style.css
@@ -186,8 +186,8 @@ image img:hover{
     
     padding-left: 100px;
     padding-right: 100px;
-    margin-left: 230px;
-    margin-right: 230px;
+    margin-left: 150px;
+    margin-right: 150px;
     margin-bottom: 200px;
    
     
@@ -207,10 +207,26 @@ image img:hover{
   margin-bottom: 100px;
 }
 
+.works1{
+  margin-top: 100px;
+  font-family: 'Quicksand', sans-serif;
+  text-align: center;
+  color: white;
+  font-size: 80px;
+  margin-left: 300px;
+  margin-right: 300px;
+  border-radius: 50px;
+  padding-top: 5px;
+  padding-bottom: 10px;
+  background-color: #436850;
+  margin-bottom: 50px;
+}
+
 .about-me{
   width: 100%; /* Adjust as needed */
   text-align: center;
   display: flex;
+  margin-bottom: 100px;
         
 }
 
@@ -260,17 +276,46 @@ circle {
   stroke: url(#GradientColor); 
   stroke-width: 20px;
   stroke-dasharray: 450;
+  stroke-dashoffset: 100;
+  ;
+}
+
+.circle1 {
+  fill: none;
+  stroke: url(#GradientColor); 
+  stroke-width: 20px;
+  stroke-dasharray: 450;
+  stroke-dashoffset: 160;
+}
+
+.circle2 {
+  fill: none;
+  stroke: url(#GradientColor); 
+  stroke-width: 20px;
+  stroke-dasharray: 450;
   stroke-dashoffset: 10;
   ;
 }
 
+
+.circle3 {
+  fill: none;
+  stroke: url(#GradientColor); 
+  stroke-width: 20px;
+  stroke-dasharray: 450;
+  stroke-dashoffset: 10;
+  ;
+}
+
+
 .label{
-  margin-left: 0px;;
+  margin-left: 0px;
   font-family: 'Quicksand', sans-serif;
   margin-top: 100px;
   font-size: 30px;
-
 }
+
+
 #yes{
   margin-left: 50px;
 }
@@ -301,6 +346,7 @@ svg{
     margin: 20px;
     padding: 10px;
     background-color: #F8F4EC;
+    margin-left: 120px;
   }
   
   .product-card img {
@@ -343,7 +389,100 @@ svg{
   }
 
   .button:hover {
-    background: #BB9CC0;
+    background: #436850;
    
   }
 
+  .row5{
+    padding: 20px;
+    background-color: #B0926A;
+    color: #EBD9B4;
+    width: 800px;
+    height: 1050px;
+    margin-bottom: 100px;
+    border-radius: 30px;
+    margin-left: 250px;
+    font-size: 30px;
+    text-align: center;
+  }
+  label {
+    margin: 30px 0 0 20px;
+    color: white;
+    font-size: 30px;
+  }
+  
+  .row3{
+    padding: 20px;
+    background-color: white;
+    color: #503C3C;
+    width: 380px;
+}
+input, textarea {
+  width: 500px;
+  padding: 10px;
+  margin-left: 300px;
+  margin: 5px 0 20px 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+input:focus, textarea:focus {
+  outline: none;
+  border-color: white;
+}
+
+.section1{
+  background: white;
+  padding-left: 100px;
+  margin-bottom: 150px;
+  margin-left: 100px;
+  margin-right: 150px;
+  background-color: #78A083;
+
+}
+.colz{
+  padding-top: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-top: 30px;
+  padding-bottom: 20px;
+}
+
+.style{
+  margin-left: 140px;
+}
+
+.style2{
+width: 735px;
+}
+
+.oval-button {
+  margin-left: 270px;
+  width: 200px;
+  height: 55px;
+  border-radius: 4px;
+  background-color: #ADBC9F;
+  color: white;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  font-family: 'Quicksand', serif;
+}
+
+.oval-button:hover {
+  background: #436850;
+ 
+}
+.messeu{
+  font-family: 'Quicksand', sans-serif;
+  color: black;
+  font-size: 50px;
+  margin-left: 15px;
+  margin-bottom: 30px;
+  color: white;
+
+
+}
